WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
267644
[scroll-anchoring] cbssports.com: Video playing and webpage elements flickering when scrolling
https://bugs.webkit.org/show_bug.cgi?id=267644
Summary
[scroll-anchoring] cbssports.com: Video playing and webpage elements flickeri...
Nikos Mouchtaris
Reported
2024-01-17 11:19:12 PST
[scroll-anchoring] cbssports.com: Video playing and webpage elements flickering when scrolling
Attachments
Add attachment
proposed patch, testcase, etc.
Nikos Mouchtaris
Comment 1
2024-01-17 11:19:56 PST
<
rdar://problem/119959431
>
Nikos Mouchtaris
Comment 2
2024-01-17 11:24:18 PST
Pull request:
https://github.com/WebKit/WebKit/pull/22872
EWS
Comment 3
2024-01-17 13:43:27 PST
Committed
273142@main
(830a3fbfc285): <
https://commits.webkit.org/273142@main
> Reviewed commits have been landed. Closing PR #22872 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug