[scroll-anchoring] cbssports.com: Video playing and webpage elements flickering when scrolling https://bugs.webkit.org/show_bug.cgi?id=267644 rdar://119959431

Reviewed by Wenson Hsieh.

On cbssports.com there is an undesired scroll anchoring adjustment when the user scrolls to dismiss
the video, which cancels the user scroll and brings back up the video. Ideally, we would understand
why this adjustment is occuring, but for now we should disable anchor adjustments during user scroll
(like we do on iOS) to prevent them from interfering with user gestures.

* Source/WebCore/page/scrolling/ScrollAnchoringController.cpp:
(WebCore::ScrollAnchoringController::adjustScrollPositionForAnchoring):

Canonical link: https://commits.webkit.org/273142@main